applications/echoip/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoip
  annotations:
    linkerd.io/inject: "enabled"
